Build results of d3bbfed (on master)

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Pod::Weaver::Section::SourceGitHub
 
+0.57  2024-01-22
+    - Fix extra https:// in front of repo urls
+
 0.56  2017-07-31
     - add MANIFEST.SKIP
 
