--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Pod::Weaver::Section::SourceGitHub
 
 {{$NEXT}}
+    - Add "header" option to allow changing the header name.
+      (thanks Robert Rothenberg) [PR #2]
 
 0.57  2024-01-22
     - Fix extra https:// in front of repo urls
